--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ alembic = ">=1.6, <2"
 flask = ">=3, <4"
 sqlalchemy = ">=2, <3"
 pydantic = ">=2, <3"
+requests-mock = "^1.12.1"
 
 [tool.poetry.group.dev.dependencies]
 black = ">=23.1"
